--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 										<p><span class="title-s text-white">Name: </span> <span>Mayank Kumar</span></p>
 
 										<p><span class="title-s text-white">Job Role: </span> <span>Python Developer</span></p>
-										<p><span class="title-s text-white">Experience: </span> <span>3 Years 2 Months</span></p>
+										<p><span class="title-s text-white">Experience: </span> <span>3+ Years </span></p>
 										<!-- <p><span class="title-s">Address: </span> <span>Ghaziabad, India</span></p> -->
 									  </div>
 									</div>
@@ -329,7 +329,7 @@
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Backend Developer</span></li>
 									<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li> -->
-									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
+									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology (B.Tech)</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<!-- <li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp; Tableau</span></li> -->
 									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, Excel, Git, Microsoft Azure Board, &amp; Bitbucket</span></li>
@@ -463,7 +463,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2018-2022</span>
-    					<h2>Bachelor of Engineering</h2>
+    					<h2>Bachelor of Technology (B.Tech)</h2>
     					<span class="position">AKTU University</span>
     					<!-- <p class="mt-4">Grade: First class distinction.</p> -->
     				</div>
